--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -384,9 +384,10 @@ body {
   }
   a {
     transition: .5s;
-  }
-  a:hover, a:focus {
-    letter-spacing: 0.04em;
+    &:hover,
+    &:focus {
+      transform: scale(1.1);
+    }
   }
 }
 
